[1/2] SystemUI: Add custom color to ambient pulse notification lights
Add custom color to ambient pulse notification lights

--- a/core/res/res/values/x_config.xml
+++ b/core/res/res/values/x_config.xml
@@ -68,4 +68,7 @@
         <item>torch</item>
     </string-array>
 
+    <!-- Default value for Ambient Pulse light color -->
+    <integer name="config_ambientNotificationDefaultColor">0xFF3980FF</integer>
+
 </resources>
