--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -75,4 +75,7 @@
     <!-- Global Actions pref list -->
     <java-symbol type="array" name="custom_config_globalActionsList" />
 
+  <!-- Ambient notification light color -->
+  <java-symbol type="integer" name="config_ambientNotificationDefaultColor" />
+
 </resources>
