UDFPS: Night Light Disable [1/2]
FOD: allow user to disable night light when active [1/2]
Make this optional for some devices and config for default true on devices which weird light sensors on FOD
eg: OP7TPRO

Remove FOD night light if not enabled by default [1/2]

SDB: adapt it for A12 UDFPS by Google

Co-authored-by: Varun Date <date.varun123@gmail.com>
Co-authored-by: Pranav Vashi <neobuddy89@gmail.com>
Co-authored-by: SuperDroidBond <superdroidbond@yahoo.com>
Signed-off-by: SuperDroidBond <superdroidbond@yahoo.com>

--- a/core/res/res/values/x_symbols.xml
+++ b/core/res/res/values/x_symbols.xml
@@ -85,4 +85,7 @@
     <java-symbol type="string" name="config_lightFontFamily" />
     <java-symbol type="string" name="config_regularFontFamily" />
 
+  <!-- NightLight FOD -->
+  <java-symbol type="bool" name="disable_fod_night_light"/>
+
 </resources>
